# hwvault

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release-artifacts.yml  reusable-sanity.yml  reusable-secret-scan.yml
docs/: EXTERNAL_SECURITY_REVIEW.md  INCIDENT_RESPONSE.md  OPENCLAW.md  PRODUCTION_READINESS.md  RELEASE_GATES.md  RELEASE_SIGNING.md  SCENE_PROOF.md
docs/examples/: openclaw-policy.json
scripts/: sync_repo_standards.sh
scripts/hardware/: hwvault-2fa-http-backend.example.py  hwvault-second-factor-approve.example.sh  test_release_gates.sh
